[package]
name = "reemap"
version = "0.1.0"
edition = "2024"

[dependencies]
enum-map = "2.7.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
strum = { version = "0.27.1", features = ["derive"] }
windows = { version = "0.61.1", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
] }
egui = "0.31.1"
glow = "0.16.0"
glutin = "0.32.3"
winit = "0.30.10"
egui-winit = "0.31.1"
egui_glow = { version = "0.31.1", features = ["winit"] }
glutin-winit = "0.5.0"
tray-icon = "0.20.1"
image = "0.25.6"
catppuccin-egui = { version = "5.5.0", default-features = false, features = [
    "egui31",
] }
thiserror = "2.0.12"
oneshot = { version = "0.1.11", default-features = false, features = ["std"] }
egui_extras = "0.31.1"
itertools = "0.14.0"
etcetera = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"
native-dialog = { version = "0.9.0", features = [
    "windows_dpi_awareness",
    "windows_visual_styles",
] }
smallvec = { version = "1.15.1", features = ["serde", "const_generics"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
winres = "0.1.12"
