[package]
name = "reemap"
authors = ["Jordan Johnson"]
version = "1.0.0"
edition = "2024"
description = "Simple, efficient input remaps"
repository = "https://github.com/MightyBurger/reemap"
# This should be Apache-2.0 OR MIT.
# But cargo-wix doesn't understand that format...
license = "Apache-2.0"
publish = false

[package.metadata.wix]
banner = "resource\\banner.png"
dialog = "resource\\dialog.png"
product-icon = "resource\\lurk.ico"
path-guid = "AA0148F4-682D-4781-8A8E-B287A846DD02"
upgrade-guid = "D3FD6F06-8182-44FC-B8C4-98E1A636025D"

[dependencies]
enum-map = "2.7.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
strum = { version = "0.27.1", features = ["derive"] }
windows = { version = "0.61.1", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_Security",
] }
egui = "0.31.1"
glow = "0.16.0"
glutin = "0.32.3"
winit = "0.30.10"
egui-winit = "0.31.1"
egui_glow = { version = "0.31.1", features = ["winit"] }
glutin-winit = "0.5.0"
tray-icon = "0.20.1"
image = { version = "0.25.6", features = ["png"] }
thiserror = "2.0.12"
oneshot = { version = "0.1.11", default-features = false, features = ["std"] }
egui_extras = { version = "0.31.1", features = ["file", "image"] }
itertools = "0.14.0"
etcetera = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"
native-dialog = { version = "0.9.0", features = [
    "windows_dpi_awareness",
    "windows_visual_styles",
] }
smallvec = { version = "1.15.1", features = ["serde", "const_generics"] }
tracing = { version = "0.1.41", features = ["release_max_level_off"] }
tracing-subscriber = "0.3.19"
windows-strings = "0.4.2"

[build-dependencies]
winres = "0.1.12"
ico = "0.4.0"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
